--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,15 @@
             SHARK<br /> 
             <span style="margin-left: 25px;">ATTACK!</span>
         </p>
+        <div class="bottom-content-wrapper">
+            <p class="justin-bavier">Justin Bavier</p>
+            <div class="link-wrapper volt">
+                <a  href="">VOLT CREATIVE</a>
+            </div>
+            <div class="link-wrapper tpk">
+                <a href="">THE PRESSURE KIDS</a>
+            </div>
+        </div>
     </div>
     <div id="root"></div>
 </body>
